--- a/TodoList-react/package.json
+++ b/TodoList-react/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@craco/craco": "^6.1.1",
+    "@craco/craco": "^5.9.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^6.0.9",
     "redux": "^4.0.5",
     "uuid": "^8.3.1",
@@ -47,7 +47,7 @@
   "devDependencies": {
     "brotli-gzip-webpack-plugin": "^0.5.0",
     "compression-webpack-plugin": "^6.1.1",
-    "webpack": "^4.44.2",
+    "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.4.0"
   }
 }
